--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,6 +42,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
